Add debugging and text editors chapters. The text editors chapter has both VIM and Emacs sections; the VIM section is more polished than the Emacs section. The debugging chapter is only preliminary; it still needs a lot of work.

--- a/labmanual/Makefile
+++ b/labmanual/Makefile
@@ -1,5 +1,5 @@
 #
-# $Id: Makefile,v 1.15 2001/08/02 21:34:40 pete Exp $
+# $Id: Makefile,v 1.16 2001/08/08 07:06:34 pete Exp $
 #
 # Build the ECE 291 Lab Manual.
 #
@@ -26,6 +26,8 @@ SRCS=  book.sgml
 SRCS+= preface.sgml
 SRCS+= introduction/chapter.sgml
 SRCS+= using-pc/chapter.sgml
+SRCS+= text-editors/chapter.sgml
+SRCS+= debugging/chapter.sgml
 SRCS+= assembly/chapter.sgml
 SRCS+= nasm/chapter.sgml
 SRCS+= c-prog/chapter.sgml
