Add chapters covering real mode vs. protected mode differences and an intro to pmodelib (mostly copied from the pmodelib lecture). Add a full PModeLib reference (still a few things to be polished and added). Add an appendix declaration file (for the PModeLib appendix).

--- a/pmode-tutorial/Makefile
+++ b/pmode-tutorial/Makefile
@@ -20,6 +20,9 @@ SRCS=  book.sgml
 SRCS+= introduction/chapter.sgml
 SRCS+= dev-env/chapter.sgml
 SRCS+= start-pmode/chapter.sgml
+SRCS+= realprot-diff/chapter.sgml
+SRCS+= pmodelib-intro/chapter.sgml
+SRCS+= pmodelib-ref/appendix.sgml
 
 # Entities
 SRCS+= chapters.ent
