Add chapter on sound programming (mostly just on playing long sounds with DMA). Link it with (and in) the Sound and DMA sections of the PModeLib reference.

--- a/pmode-tutorial/Makefile
+++ b/pmode-tutorial/Makefile
@@ -22,12 +22,15 @@ SRCS+= dev-env/chapter.sgml
 SRCS+= start-pmode/chapter.sgml
 SRCS+= realprot-diff/chapter.sgml
 SRCS+= pmodelib-intro/chapter.sgml
+SRCS+= sound/chapter.sgml
 SRCS+= pmodelib-ref/appendix.sgml
 
 # Entities
 SRCS+= chapters.ent
 
 # Images
+IMAGES=  sound/dma.dia
+IMAGES+= sound/dma1.dia
 
 SYMLINKS= ${DESTDIR} index.html
 
